# graphql-bank

./: .gitignore  Cargo.toml  README.md
migrations/: 20230509204851_create_account_table.up.sql
src/: error.rs  main.rs
src/api/: mod.rs
src/api/v5/: graphql_resource.rs  mod.rs
src/graphql/: errors.rs  graphql_context.rs  mod.rs
src/graphql/schema/: mod.rs  mutation.rs  query.rs
src/persistence/: account_repository.rs  mod.rs
src/persistence/connection/: mod.rs
src/persistence/models/: account.rs
src/service/: account_service.rs
